--- a/download.html
+++ b/download.html
@@ -7,7 +7,6 @@
 
 <style>
 *{box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto}
-
 body{
   margin:0;min-height:100vh;display:flex;justify-content:center;align-items:center;
   background:linear-gradient(135deg,#eef1f7,#f9fafc);
@@ -15,26 +14,42 @@ body{
 
 /* ===== WATERMARK ===== */
 .watermark{
-  position:fixed;inset:0;display:flex;justify-content:center;align-items:center;
-  pointer-events:none;z-index:0;opacity:.45;filter:blur(.4px);
+  position:fixed;inset:0;
+  display:flex;justify-content:center;align-items:center;
+  pointer-events:none;z-index:0;
 }
-.watermark .pw-logo{transform:scale(3.6);opacity:.95}
+.watermark.login{
+  opacity:.35;filter:blur(.8px);
+}
+.watermark.dashboard{
+  opacity:.55;filter:blur(.4px);
+}
+.watermark .pw-logo{
+  transform:scale(3.6);opacity:.9;
+}
 
-/* ===== GLASS CARD (LOGIN + DASHBOARD) ===== */
+/* ===== CARDS ===== */
 .card{
-  width:100%;max-width:420px;
-  background:rgba(255,255,255,.28); /* more glassy */
-  backdrop-filter:blur(22px) saturate(170%);
-  -webkit-backdrop-filter:blur(22px) saturate(170%);
-  border-radius:30px;padding:28px;border:1px solid rgba(255,255,255,.35);
-  box-shadow:0 35px 70px rgba(0,0,0,.22);
-  position:relative;z-index:1;
+  width:100%;max-width:420px;padding:28px;border-radius:30px;
+  background:rgba(255,255,255,.35);
+  backdrop-filter:blur(18px) saturate(150%);
+  border:1px solid rgba(255,255,255,.35);
+  box-shadow:0 30px 60px rgba(0,0,0,.18);
+  z-index:1;
+}
+.card.dashboard{
+  background:rgba(255,255,255,.22);
+  backdrop-filter:blur(32px) saturate(200%);
+  box-shadow:
+    0 45px 100px rgba(0,0,0,.28),
+    inset 0 0 0 1px rgba(255,255,255,.25);
 }
 .hidden{display:none}
 
-/* ===== LOGO ===== */
+/* ===== PW LOGO ===== */
 .pw-logo{
-  width:120px;height:120px;margin:0 auto 14px;background:#000;border-radius:50%;
+  width:120px;height:120px;margin:0 auto 14px;
+  background:#000;border-radius:50%;
   display:flex;justify-content:center;align-items:center;position:relative;
 }
 .pw-logo::before{
@@ -42,95 +57,173 @@ body{
   border:5px solid #fff;border-left-color:transparent;border-right-color:transparent;
   transform:rotate(-12deg);
 }
-.pw-text{color:#fff;font-family:"Times New Roman",serif;font-size:64px;font-weight:bold}
+.pw-text{color:#fff;font-size:64px;font-family:"Times New Roman";font-weight:bold}
 
-/* ===== INPUTS / BUTTONS ===== */
+/* ===== INPUTS ===== */
 input{
-  width:100%;padding:14px;border-radius:14px;border:1px solid rgba(0,0,0,.15);
-  font-size:14px;margin-top:12px;background:rgba(255,255,255,.95);
+  width:100%;padding:14px;border-radius:14px;
+  border:1px solid rgba(0,0,0,.15);
+  margin-top:12px;font-size:14px;
 }
 button{
-  width:100%;padding:14px;border:none;border-radius:14px;background:#000;color:#fff;
-  font-size:15px;font-weight:600;cursor:pointer;margin-top:14px;
+  width:100%;padding:14px;margin-top:14px;
+  border:none;border-radius:14px;
+  background:#000;color:#fff;font-weight:600;cursor:pointer;
 }
-.hint{font-size:12.5px;color:#222;margin-top:6px;line-height:1.6}
+.hint{font-size:12.5px;margin-top:6px;color:#333}
 
-/* ===== ACCESS + TIMER ===== */
-.access{text-align:center;font-weight:800}
+/* ===== TIMER ===== */
 .timer{
-  background:#000;color:#fff;padding:14px;border-radius:18px;text-align:center;
-  margin-top:8px;animation:pulse 1.6s ease-in-out infinite;
+  background:#000;color:#fff;padding:14px;border-radius:18px;
+  text-align:center;margin-top:10px;
+  animation:blink 1.2s infinite;
 }
-@keyframes pulse{50%{box-shadow:0 0 0 6px rgba(0,0,0,.05)}}
+@keyframes blink{50%{opacity:.65}}
 
-.section{margin-top:18px}
+.section{margin-top:22px}
 
-/* ===== INSTRUCTIONS (IMPROVED VISIBILITY) ===== */
+/* ===== INSTRUCTIONS (CLEARLY DIFFERENT) ===== */
 .instruction-header{
-  display:flex;align-items:center;gap:8px;
-  cursor:pointer;font-weight:700;
-  padding:12px 14px;
-  border-radius:14px;
-  background:rgba(255,255,255,.55);
-  border:1px solid rgba(0,0,0,.08);
-  box-shadow:0 8px 18px rgba(0,0,0,.12);
-  transition:transform .2s, box-shadow .2s;
-}
-.instruction-header:hover{
-  transform:translateY(-1px);
-  box-shadow:0 12px 26px rgba(0,0,0,.18);
-}
-.instruction-icon{
-  width:28px;height:28px;border-radius:50%;
-  background:#000;color:#fff;
-  display:flex;align-items:center;justify-content:center;
-  font-size:14px;font-weight:800;
+  display:flex;justify-content:space-between;align-items:center;
+  padding:16px;border-radius:18px;
+  background:linear-gradient(135deg,#000,#1c1c1c);
+  color:#fff;font-weight:800;cursor:pointer;
+  box-shadow:0 14px 35px rgba(0,0,0,.35);
 }
 .instruction-content{
   max-height:0;overflow:hidden;opacity:0;
-  transition:max-height .6s ease, opacity .4s ease;
+  transition:.5s ease;
+  background:rgba(255,255,255,.97);
+  border-radius:18px;padding:0 16px;margin-top:12px;
   font-size:13px;line-height:1.7;
-  margin-top:10px;
 }
-.instruction-content.open{max-height:1600px;opacity:1}
+.instruction-content.open{
+  max-height:1600px;opacity:1;padding:16px;
+}
 
 /* ===== VIDEO ===== */
-iframe{width:100%;height:200px;border-radius:14px;border:none}
+iframe{
+  width:100%;height:200px;border-radius:14px;border:none;
+}
 .video-link{text-align:center;font-size:13px;margin-top:8px}
 </style>
 </head>
 
 <body>
 
-<div class="watermark">
+<!-- LOGIN WATERMARK -->
+<div class="watermark login" id="wmLogin">
   <div class="pw-logo"><div class="pw-text">PW</div></div>
 </div>
 
-<div class="card">
+<!-- DASHBOARD WATERMARK -->
+<div class="watermark dashboard hidden" id="wmDash">
+  <div class="pw-logo"><div class="pw-text">PW</div></div>
+</div>
 
 <!-- LOGIN -->
-<div id="loginBox">
+<div class="card" id="loginCard">
   <div class="pw-logo"><div class="pw-text">PW</div></div>
   <input id="roomPass" type="password" placeholder="Enter room password">
-  <div class="hint">Hint: <b>RS@DDMMYYYY</b></div>
-  <div class="hint">Password automatically changes after 24 hours</div>
+  <div class="hint">Hint: RS@DDMMYYYY</div>
   <button onclick="login()">Continue</button>
-  <div id="roomErr" class="hint"></div>
+  <div id="roomMsg" class="hint"></div>
 </div>
 
 <!-- DASHBOARD -->
-<div id="dash" class="hidden">
+<div class="card dashboard hidden" id="dashCard">
   <div class="pw-logo" style="width:90px;height:90px">
     <div class="pw-text" style="font-size:46px">PW</div>
   </div>
 
-  <div class="access">ACCESS GRANTED</div>
   <div class="timer" id="timer"></div>
 
   <!-- INSTRUCTIONS -->
   <div class="section">
     <div class="instruction-header"
-         onclick="document.getElementById('instr').classList.toggle('open')">
-      <div class="instruction-icon">ℹ️</div>
-      <span>Instructions</span>
+      onclick="instr.classList.toggle('open')">
+      <span>📘 Instructions</span><span>▼</span>
     </div>
+    <div id="instr" class="instruction-content">
+      Access valid for 24 hours due to copyright © issues.<br>
+      If any extra page or ad opens, press BACK once and continue.<br>
+      For fewer ads, use Opera Mini browser.<br>
+      APK file works on Android devices only.
+    </div>
+  </div>
+
+  <!-- VIDEO -->
+  <div class="section">
+    <iframe src="https://drive.google.com/file/d/16WmuBH_ycBUAsqNYaSDnJ9nbS5s2JF2s/preview"></iframe>
+    <div class="video-link">
+      If video does not play on PC/Laptop,
+      <a href="https://drive.google.com/file/d/16WmuBH_ycBUAsqNYaSDnJ9nbS5s2JF2s/view" target="_blank">
+        open here
+      </a>
+    </div>
+  </div>
+
+  <!-- WEBSITE -->
+  <div class="section">
+    <button onclick="window.open('https://rarestudy.site','_blank')">
+      Open Website
+    </button>
+  </div>
+
+  <!-- APK -->
+  <div class="section">
+    <input id="apkPass" type="password" placeholder="Enter APK password">
+    <div class="hint">Example: APK@DDMMYYYY</div>
+    <div class="hint">APK supported on Android devices only</div>
+    <button onclick="unlockAPK()">Unlock APK</button>
+    <div id="apkMsg" class="hint"></div>
+  </div>
+</div>
+
+<script>
+const DAY=86400000;
+function today(p){
+  const d=new Date();
+  return p+String(d.getDate()).padStart(2,'0')+
+         String(d.getMonth()+1).padStart(2,'0')+
+         d.getFullYear();
+}
+function oneSec(i){
+  let t;i.addEventListener("input",()=>{
+    i.type="text";clearTimeout(t);
+    t=setTimeout(()=>i.type="password",1000);
+  });
+}
+oneSec(roomPass);oneSec(apkPass);
+
+function login(){
+  if(roomPass.value!==today("RS@")){
+    roomMsg.textContent="Wrong password";return;
+  }
+  loginCard.classList.add("hidden");
+  dashCard.classList.remove("hidden");
+  wmLogin.classList.add("hidden");
+  wmDash.classList.remove("hidden");
+  localStorage.loginTime=Date.now();
+  startTimer();
+}
+function startTimer(){
+  setInterval(()=>{
+    let left=DAY-(Date.now()-localStorage.loginTime);
+    if(left<=0){localStorage.clear();location.reload()}
+    let h=Math.floor(left/3600000),
+        m=Math.floor(left%3600000/60000),
+        s=Math.floor(left%60000/1000);
+    timer.textContent=`Session expires in ${h}h ${m}m ${s}s`;
+  },1000);
+}
+function unlockAPK(){
+  if(apkPass.value!==today("APK@")){
+    apkMsg.textContent="Wrong APK password";return;
+  }
+  apkMsg.textContent="APK unlocked (refresh hides again)";
+}
+</script>
+
+</body>
+  </html>
