--- a/download.html
+++ b/download.html
@@ -141,55 +141,44 @@ iframe{width:100%;height:200px;border-radius:14px;border:none}
 
 <b>🔑 How to Generate Access Key (Valid for 24 Hours)</b><br><br>
 
-Follow all the steps carefully to avoid any access issues.<br><br>
+Follow the steps carefully to avoid access issues.<br><br>
 
-<b>⚠️ Important Browser & Access Notes:</b><br>
-• If you open the link from any APP, it may automatically open in Google Chrome and ads may appear.<br>
-• To reduce ads, open the website directly using <b>Opera Mini</b> browser.<br>
-• If app or website does not open, turn <b>ON VPN</b> and try again.<br>
-• If any extra page, redirect, or ad opens, press <b>BACK once</b> and continue. Do not close the browser tab.<br><br>
+<b>⚠️ Important Browser Note:</b><br>
+• If you open the link from an APP, it may open in Google Chrome and ads may appear.<br>
+• To avoid ads, open the website directly using <b>Opera Mini</b> browser.<br>
+• If the app or website does not open, turn <b>ON VPN</b> and try again.<br><br>
 
-<b>📌 Login & Password Rules:</b><br>
-• Website login and APK login both follow the <b>same process</b>.<br>
-• Password is <b>date-based</b> and automatically changes every 24 hours.<br>
-• Password format example: <b>RS@DDMMYYYY</b>.<br>
-• Password changes automatically due to <b>copyright © protection policy</b>.<br><br>
+<b>📌 Steps to Generate Key:</b><br>
+1️⃣ Turn OFF DNS – Disable Private DNS / Custom DNS from phone settings.<br>
+2️⃣ Update Browser – Make sure Google Chrome is updated to the latest version.<br>
+3️⃣ Use Correct Browser – Chrome (recommended) or Opera Mini (fewer ads).<br>
+4️⃣ If any extra page or ad opens, press <b>BACK once</b> and continue. Do not close the tab.<br>
+5️⃣ Laptop / PC users must turn <b>ON VPN</b> and use an <b>Ad-Blocker</b> extension.<br><br>
 
-<b>🔐 Login Attempt Limitation:</b><br>
-• Maximum <b>3 attempts</b> are allowed.<br>
-• Remaining attempts are shown after each wrong password.<br>
-• After 3 failed attempts, login is <b>locked for 24 hours</b>.<br>
-• During lock time, login will not work even if password is correct.<br><br>
+<b>🔐 Password & Attempt Rules:</b><br>
+• Website access and APK access both follow the <b>same login process</b>.<br>
+• Password is <b>date-based</b> and changes automatically every <b>24 hours</b>.<br>
+• Password format example: <b>RS@DDMMYYYY</b> (for website login).<br>
+• You get a maximum of <b>3 password attempts</b>.<br>
+• After each wrong password, remaining attempts are shown.<br>
+• After 3 failed attempts, login is <b>locked for 24 hours</b>.<br><br>
 
-<b>⏳ Session & Refresh Behaviour:</b><br>
-• Once logged in, access remains valid for <b>24 hours</b>.<br>
-• Page refresh, new tab, or browser reopen will <b>NOT log you out</b>.<br>
-• Automatic logout happens only after full 24 hours are completed.<br>
-• After logout, login again using the <b>new password</b>.<br><br>
-
-<b>📹 Video Guide:</b><br>
-• Video guide is provided inside the dashboard.<br>
-• If video does not play on Laptop or PC, use the <b>Open Here</b> link below the video.<br><br>
-
-<b>🌐 Website Access:</b><br>
-• Website opens only after successful login.<br>
-• Website follows the same password, attempts, and 24-hour validity rules.<br><br>
-
-<b>📦 APK File Access:</b><br>
+<b>📦 APK Password Rules:</b><br>
 • APK works on <b>Android devices only</b>.<br>
-• APK has a separate password which also changes every 24 hours.<br>
+• APK has a separate password (example: <b>APK@DDMMYYYY</b>).<br>
 • APK password also allows only <b>3 attempts</b>.<br>
-• Refreshing the page will hide the APK again.<br>
-• After 3 wrong attempts, APK access is locked for <b>24 hours</b>.<br><br>
+• After 3 wrong attempts, APK access is <b>locked for 24 hours</b>.<br>
+• Refreshing the page will hide the APK again.<br><br>
 
-<b>💻 Device Compatibility:</b><br>
+<b>⏳ Key Validity:</b><br>
+• Access Key is valid for <b>24 hours only</b>.<br>
+• After 24 hours, you must login again and repeat the same process.<br>
+• These limits are applied due to <b>copyright © issues</b>.<br><br>
+
+<b>💻 Device Support:</b><br>
 • Android: Website + APK<br>
 • iOS: Website only<br>
-• Laptop / PC: Website (VPN + Ad-Blocker recommended)<br><br>
-
-<b>⚖️ Copyright Notice:</b><br>
-• All access restrictions are applied due to <b>copyright © protection</b>.<br>
-• Daily password change and 24-hour access limit cannot be bypassed.
+• Laptop / PC: Website (VPN + Ad-Blocker recommended)
 
     </div>
   </div>
@@ -284,4 +273,4 @@ function unlockAPK(){
 </script>
 
 </body>
-  </html>
+                                                          </html>
